Remove std::unordered_map sorting assumption from MasterHostScanCacheTest.

This assumption prevented thakis@ from being able to use libc++ (see
crbug.com/750342).

Bug: 750342
Change-Id: Ifb7467ded104d2627bbfc08a973aba7520c36619